--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <h2>Introductie</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/introduction.png">
                     </div>
                 </header>
                 <section>
@@ -66,7 +66,7 @@
                         <h2>Afbeeldingen toevoegen</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/afbeelding-toevoegen.png">
                     </div>
                 </header>
                 <section>
@@ -102,7 +102,7 @@
                         <h2>Hete soep!</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/hete-soep-pan-60769132.jpg">
                     </div>
                 </header>
                 <section>
@@ -128,7 +128,7 @@
                         </p>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/how-to-diffuse-conflict.png">
                     </div>
                 </header>
 
@@ -174,7 +174,7 @@
                         <h2>Release</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/a_new_release.jpg">
                     </div>
                 </header>
                 <section>
