--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                         <h2>Een conflict oplossen</h2>
                         <p>
                             Winnaar:
-							<span id="winnaar">Chuck Norris</span>          
-						</p>
+                            <span id="winnaar">Superman</span>
+                        </p>
                     </div>
                     <div class="meta">
                         <img src="images/placeholder.jpg">
